--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "@vuepress/plugin-pagination": "^1.0.0-alpha.47",
         "@vuepress/plugin-search": "^1.0.0-alpha.47",
         "vuepress": "^1.0.0-alpha.47"
+    },
+    "dependencies": {
+        "moment": "^2.24.0"
     }
 }
