--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@vuepress/plugin-active-header-links": "^1.0.0-alpha.48",
+        "@vuepress/plugin-back-to-top": "^1.0.0-alpha.48",
         "@vuepress/plugin-blog": "^1.0.0-alpha.47",
         "@vuepress/plugin-pagination": "^1.0.0-alpha.47",
         "@vuepress/plugin-search": "^1.0.0-alpha.47",
